create a countdown function

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     <link rel="stylesheet" href="./assets/css/style.css" />
 </head>
 <body>
-    
+    <p id="clock"></p>
+    <button id="start" onclick="timerUpdate()">START</button> <!-- TO DO-->
+
     <script src="./assets/js/script.js"></script>
 </body>
 </html>
