--- a/index.html
+++ b/index.html
@@ -7,11 +7,28 @@
     <link rel="icon" type="image/png" href="./assets/images/quiz.png" sizes="16x16">
     <title>Code Quiz Challenge</title>
     <link rel="stylesheet" href="./assets/css/style.css" />
+    <script defer src="./assets/js/script.js"></script>
 </head>
 <body>
-    <p id="clock"></p>
-    <button id="start" onclick="timerUpdate()">START</button> <!-- TO DO-->
-
-    <script src="./assets/js/script.js"></script>
+    <!-- Static navbar -->
+    <nav class="navbar">
+        <div class="navbar-container">
+            <div class="nav-left">
+                <a class="nav-link" href="./highscore.html">View Highscores</a>
+            </div>
+            <div class="nav-right">
+                <input type="text" class="clock" readonly value="Time: 05:00">
+            </div>
+        </div>
+    </nav>
+    <!--container for text and questions-->
+    <div class="container"> 
+        <div id="question-container"></div> 
+        <!-------------------TO DO --------------------->
+        <div class="controls">
+            <button id="start" class="start btn">Start</button>
+        </div>
+    </div>
+    
 </body>
 </html>
