--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<head lang="en">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Icon website -->
@@ -14,7 +14,7 @@
     <nav class="navbar">
         <div class="navbar-container">
             <div class="nav-left">
-                <a class="nav-link" href="./highscore.html">View Highscores</a>
+                <a class="nav-link" href="./highscores.html">View Highscores</a>
             </div>
             <div class="nav-right">
                 <input type="text" class="clock" readonly value="Time: 05:00">
