--- a/end.html
+++ b/end.html
@@ -6,13 +6,13 @@
         <!-- Icon website -->
         <link rel="icon" type="image/png" href="./assets/images/quiz.png" sizes="16x16">
         <title>Code Quiz Challenge</title>
-        <link rel="stylesheet" href="./assets/css/end.css" />
+        <link rel="stylesheet" href="./assets/css/style.css" />
         <script defer src="./assets/js/script.js"></script>
         <script defer src="./assets/js/end.js"></script>
     </head>
 <body>
     <div class="container">
-        <div class="end flex" id="end">
+        <div class="end" id="end">
             <h1>All Done!</h1>
             <p>Your final score is <span id="finalScore">0</span></p>
             <form>
@@ -24,4 +24,4 @@
         </div>
     </div>
 </body> 
-</html>  
+</html> 
