complete end page, fix quiz display and timer bug, update README

--- a/quiz.html
+++ b/quiz.html
@@ -23,7 +23,7 @@
         </div>
     </div>
     <!--questions and answers-->
-    <div class="container flex">        
+    <div class="container">        
         <div id="question-container" class="center">
             <h3 id="question">A very long long long long long Question</h3>
             <div class="choice-container">
