--- a/end.html
+++ b/end.html
@@ -7,21 +7,27 @@
         <link rel="icon" type="image/png" href="./assets/images/quiz.png" sizes="16x16">
         <title>Code Quiz Challenge</title>
         <link rel="stylesheet" href="./assets/css/style.css" />
-        <script defer src="./assets/js/script.js"></script>
+        
         <script defer src="./assets/js/end.js"></script>
     </head>
 <body>
     <div class="container">
         <div class="end" id="end">
             <h1>All Done!</h1>
-            <p>Your final score is <span id="finalScore">0</span></p>
-            <form>
-                <p>Enter your username</p>
-                <input type="text" name="username" id="username" placeholder="username"/>
-                <button type="submit" class="btn" id="submit">Submit</button>
-                <div id="msg">test</div>
+            <p>Your final score is <span id="finalScore">0</span>. </p>
+            <form method="POST" class="">
+                <div class="input-group">
+                    <label for="username">Enter your username:</label>
+                    <input type="text" name="username" id="username" placeholder="Jane Doe" />
+                </div>
+                <div id="msg"></div>
             </form>
+            <hr>
+            <div class="controls">
+                <button type="submit" class="btn" id="btn-submit">Submit</button>
+                <a class="btn" id="btn-back" href="./index.html">Play Again</a>
+            </div>            
         </div>
     </div>
 </body> 
-</html> 
+</html>  
