--- a/scores.html
+++ b/scores.html
@@ -7,8 +7,7 @@
         <link rel="icon" type="image/png" href="./assets/images/quiz.png" sizes="16x16">
         <title>Code Quiz Challenge</title>
         <link rel="stylesheet" href="./assets/css/style.css" />
-        <script defer src="./assets/js/script.js"></script>
-        <script defer src="./assets/js/highscores_script.js"></script>
+        <script defer src="./assets/js/highscore.js"></script>
     </head>
 <body>
     <div class="container">
@@ -16,7 +15,7 @@
             <h1>HIGH SCORES</h1>
             <ul id="highscoresList"></ul>
             <div class="controls">
-                <button id="back" onclick="window.location.href='./index.html'" class="btn">&lt;Back</button>
+                <button id="back" onclick="window.location.href='./index.html'" class="btn">Home</button>
                 <button id="clear" class="btn clear">Clear scores</button>
             </div>
         </div>
