fix button with disabled property

--- a/end.html
+++ b/end.html
@@ -18,7 +18,7 @@
             <form method="POST" class="">
                 <div class="input-group">
                     <label for="username">Enter your username:</label>
-                    <input type="text" name="username" id="username" placeholder="Jane Doe" />
+                    <input type="text" name="username" id="username" placeholder="Your name here" />
                 </div>
                 <div id="msg"></div>
             </form>
