fix raking bugs and Readme

--- a/scores.html
+++ b/scores.html
@@ -5,6 +5,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!-- Icon website -->
         <link rel="icon" type="image/png" href="./assets/images/quiz.png" sizes="16x16">
+        <!--Google icons-->
+        <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
         <title>Code Quiz Challenge</title>
         <link rel="stylesheet" href="./assets/css/style.css" />
         <script defer src="./assets/js/highscore.js"></script>
@@ -14,6 +16,7 @@
         <div class="flex" id="highScores">
             <h1>HIGH SCORES</h1>
             <ul id="highscoresList"></ul>
+            
             <div class="controls">
                 <button id="back" onclick="window.location.href='./index.html'" class="btn">Home</button>
                 <button id="clear" class="btn clear">Clear scores</button>
