--- a/scores.html
+++ b/scores.html
@@ -14,9 +14,9 @@
 <body>
     <div class="container">
         <div class="flex" id="highScores">
-            <h1>HIGH SCORES</h1>
+            <h1>TOP FIVE</h1>
             <ul id="highscoresList"></ul>
-            
+            <hr>
             <div class="controls">
                 <button id="back" onclick="window.location.href='./index.html'" class="btn">Home</button>
                 <button id="clear" class="btn clear">Clear scores</button>
