clean code, comments and change highscore display

--- a/quiz.html
+++ b/quiz.html
@@ -25,22 +25,22 @@
     <!--questions and answers-->
     <div class="container">        
         <div id="question-container" class="center">
-            <h3 id="question">A very long long long long long Question</h3>
+            <h3 id="question"></h3>
             <div class="choice-container">
                 <p class="choice-number">1</p>
-                <p class="choice-txt" data-number="1">Answer 1</p>
+                <p class="choice-txt" data-number="1"></p>
             </div>   
             <div class="choice-container">
                 <p class="choice-number">2</p>
-                <p class="choice-txt" data-number="2">Answer 2</p>
+                <p class="choice-txt" data-number="2"></p>
             </div>
             <div class="choice-container">
                 <p class="choice-number">3</p>
-                <p class="choice-txt" data-number="3">Answer 3</p>
+                <p class="choice-txt" data-number="3"></p>
             </div> 
             <div class="choice-container">
                 <p class="choice-number">4</p>
-                <p class="choice-txt" data-number="4">Answer 4</p>
+                <p class="choice-txt" data-number="4"></p>
             </div>        
         </div>  
     </div>
