--- a/highscore.html
+++ b/highscore.html
@@ -14,12 +14,13 @@
 <body>
     <div class="container">
         <div class="flex" id="highScores">
-            <h1>TOP FIVE</h1>
-            <ul id="highscoresList"></ul>
+            <h1>HIGH SCORES</h1>
+            <table>
+            </table>    
             <hr>
             <div class="controls">
                 <button id="back" onclick="window.location.href='./index.html'" class="btn">Home</button>
-                <button id="clear" class="btn clear">Clear scores</button>
+                <button id="clear" class="btn clear">Clear Scores</button>
             </div>
         </div>
 
