--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     <div class="topbar">
         <div class="topbar-container">
             <div class="left">
-                <a class="link" href="./scores.html">View High Scores</a>
+                <a class="link" href="./highscore.html">View High Scores</a>
             </div>
             <div class="right">
-                <input type="text" class="clock" readonly value="">
+                <input type="text" class="timer" readonly value="">
             </div>
         </div>
     </div>
