fix broken links

--- a/quiz.html
+++ b/quiz.html
@@ -15,7 +15,7 @@
     <div class="topbar">
         <div class="topbar-container">
             <div class="left">
-                <a class="link" href="./scores.html">View High Scores</a>
+                <a class="link" href="./highscore.html">View High Scores</a>
             </div>
             <div class="right">
                 <input type="text" class="timer" readonly value="Time: 01:00">
