fix layout for smaller screens

--- a/end.html
+++ b/end.html
@@ -10,22 +10,24 @@
         <script defer src="./assets/js/end.js"></script>
     </head>
 <body>
-    <div class="container">
-        <div class="end" id="end">
-            <h1>All Done!</h1>
-            <p>Your final score is <span id="finalScore">0</span>. </p>
-            <form method="POST" class="">
-                <div class="input-group">
-                    <label for="username">Enter your username:</label>
-                    <input type="text" name="username" id="username" placeholder="Your name here" />
-                </div>
-                <div id="msg"></div>
-            </form>
-            <hr>
-            <div class="controls">
-                <button type="submit" class="btn" id="btn-submit">Submit</button>
-                <a class="btn" id="btn-back" href="./index.html">Play Again</a>
-            </div>            
+    <div class="wrapper"> 
+        <div class="container">
+            <div class="end" id="end">
+                <h1>All Done!</h1>
+                <p>Your final score is <span id="finalScore">0</span>. </p>
+                <form method="POST" class="">
+                    <div class="input-group">
+                        <label for="username">Enter your username:</label>
+                        <input type="text" name="username" id="username" placeholder="Your name here" />
+                    </div>
+                    <div id="msg"></div>
+                </form>
+                <hr>
+                <div class="controls">
+                    <button type="submit" class="btn" id="btn-submit">Submit</button>
+                    <a class="btn" id="btn-back" href="./index.html">Play Again</a>
+                </div>            
+            </div>
         </div>
     </div>
 </body> 
