--- a/highscore.html
+++ b/highscore.html
@@ -3,6 +3,7 @@
     <head lang="en">
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge" />
         <!-- Icon website -->
         <link rel="icon" type="image/png" href="./assets/images/quiz.png" sizes="16x16">        
         <title>Code Quiz Challenge</title>
@@ -10,21 +11,19 @@
         <script defer src="./assets/js/highscore.js"></script>
     </head>
 <body>
-    <div class="container">
-        <div class="flex" id="highScores">
-            <h1>HIGH SCORES</h1>
-            <table>
-            </table>    
-            <hr>
-            <div class="controls">
-                <button id="back" onclick="window.location.href='./index.html'" class="btn">Home</button>
-                <button id="clear" class="btn clear">Clear Scores</button>
+    <div class="wrapper">
+        <div class="container">
+            <div class="flex" id="highScores">
+                <h1>HIGH SCORES</h1>
+                <table>
+                </table>    
+                <hr>
+                <div class="controls">
+                    <button id="back" onclick="window.location.href='./index.html'" class="btn">Home</button>
+                    <button id="clear" class="btn clear">Clear Scores</button>
+                </div>
             </div>
         </div>
-
-
     </div>
-
-
 </body>
 </html>
