--- a/quiz.html
+++ b/quiz.html
@@ -12,36 +12,32 @@
 <body>
      
     <!-- Top bar -->
-    <div class="topbar">
-        <div class="topbar-container">
-            <div class="left">
-                <a class="link" href="./highscore.html">View High Scores</a>
-            </div>
-            <div class="right">
-                <input type="text" class="timer" readonly value="Time: 01:00">
-            </div>
-        </div>
+    <div class="topbar">        
+        <a class="link" href="./highscore.html">View High Scores</a>
+        <input type="text" class="timer" readonly value="Time: 01:00">
     </div>
     <!--questions and answers-->
-    <div class="container">        
-        <div id="question-container" class="center">
-            <h3 id="question"></h3>
-            <div class="choice-container">
-                <p class="choice-number">1</p>
-                <p class="choice-txt" data-number="1"></p>
-            </div>   
-            <div class="choice-container">
-                <p class="choice-number">2</p>
-                <p class="choice-txt" data-number="2"></p>
+    <div class="wrapper">
+        <div class="container">        
+            <div id="question-container" class="center">
+                <h3 id="question"></h3>
+                <div class="choice-container">
+                    <p class="choice-number">1</p>
+                    <p class="choice-txt" data-number="1"></p>
+                </div>   
+                <div class="choice-container">
+                    <p class="choice-number">2</p>
+                    <p class="choice-txt" data-number="2"></p>
+                </div>
+                <div class="choice-container">
+                    <p class="choice-number">3</p>
+                    <p class="choice-txt" data-number="3"></p>
+                </div> 
+                <div class="choice-container">
+                    <p class="choice-number">4</p>
+                    <p class="choice-txt" data-number="4"></p>
+                </div>        
             </div>
-            <div class="choice-container">
-                <p class="choice-number">3</p>
-                <p class="choice-txt" data-number="3"></p>
-            </div> 
-            <div class="choice-container">
-                <p class="choice-number">4</p>
-                <p class="choice-txt" data-number="4"></p>
-            </div>        
         </div>  
     </div>
 </body>
